# fiddle-ferret

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/music_start/: __init__.py  cli.py  decode.py  detect.py  features.py  types.py
src/song_lengthen/: __init__.py  analyze.py  cli.py  decode.py  plan.py  render.py  types.py
tests/: test_cli.py  test_detect.py
tests/song_lengthen/: test_song_lengthen_analyze.py  test_song_lengthen_cli.py  test_song_lengthen_render.py
